--- a/www/templates/browse.html
+++ b/www/templates/browse.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Browse">
+<ion-view view-title="Beers">
   <ion-content>
-    <h1>Browse</h1>
+    <h1>Beer Cards will generate randomly here</h1>
   </ion-content>
 </ion-view>
