--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,18 +14,21 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item menu-close href="#/app/browse">
+          Browse the Hops
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Browse
+        <ion-item menu-close href="#/app/search">
+          Search for Hops
+        </ion-item>
+        <ion-item menu-close href="#/app/settings">
+          App Settings
         </ion-item>
       </ion-list>
     </ion-content>
