--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -1,13 +1,19 @@
 <ion-view view-title="Beers">
   <ion-content>
-    <!-- <h1>Beer Cards will generate randomly here</h1> -->
-    <h2>{{ randomBrew.data.name}}</h2>
-    	<img ng-src=" {{ randomBrew.data.labels.medium }}">
-    	<h4>{{ randomBrew.data.style.name }}</h4>
+  	<div class="card">
+  		<div class="item item-divider">
+  			<h2>{{ randomBrew.data.name}}</h2>
+  		</div>
+  		<div class="item item-body">
+  			<img ng-src=" {{ randomBrew.data.labels.medium }}">
+			<h4>{{ randomBrew.data.style.name }}</h4>
     	<h5>ABV: {{ randomBrew.data.abv || "N/A" }}</h5>
 			<h5>IBU: {{ randomBrew.data.ibu || "N/A" }}</h5>
 
     	<p>{{ randomBrew.data.style.category.name }} </p>
     	<p>{{ randomBrew.data.description || randomBrew.data.style.category.description}}</p>
+			</div>
+  	</div>
+	   <button on-swipe-right="onSwipeRight()" class="button">Next</button> 	
   </ion-content>
 </ion-view>
