--- a/www/templates/menu/menu.html
+++ b/www/templates/menu/menu.html
@@ -27,6 +27,9 @@
         <ion-item menu-close href="#/app/search">
           Search for Hops
         </ion-item>
+         <ion-item menu-close href="#/app/hopList">
+          Saved Brews
+        </ion-item>
         <ion-item menu-close href="#/app/settings">
           App Settings
         </ion-item>
