--- a/www/templates/hopList/hopList.html
+++ b/www/templates/hopList/hopList.html
@@ -1,28 +1,15 @@
-<ion-view view-title="My Saved Brews">
-<ion-header-bar class="bar-positive">
-   <button class="button button-clear" ng-click="newTask()">New</button>
-   <h1 class="title">Hop List</h1>
-   <button class="button button-clear" ng-click="logout()">Logout</button>
-</ion-header-bar>
-<ion-content class="has-header padding" has-tabs="true" on-refresh="onRefresh()">
-   <ion-refresher ng-hide="noData" on-refresh="doRefresh('1')"></ion-refresher>
-   <div class="card" ng-repeat="item in list" >
-      <div class="item item-text-wrap">
-         <span>
-         {{ item.item }}
-         </span>
-         <br/>  <br/>
-         <p class="actions padding">
-            <i class="ion-checkmark-circled icon-actions margin" ng-click="markCompleted('{{item._id}}')"></i>
-            <i class="ion-trash-b icon-actions margin" ng-click="deleteItem('{{item._id}}')"></i>
-         </p>
+<ion-view view-title="My Hop List">
+  <ion-content>
+   <h2>My Hop List</h2>
+      <div class= "list">
+         <a ng-repeat="hop in hops"
+            class="item item-thumbnail-left">
+         <img ng-src="{{ hop.icon }}">
+         <h2>{{ hop.name }}</h2>
+         <h3>{{ hop.brewery }}</h3>
+         <h5>{{ hop.style }}</h5>
+         <h4>{{ hop.abv }}</h4>
+         </a>
       </div>
-   </div>
-   <div class="card" >
-      <div class="item item-text-wrap" ng-show="noData">
-         <span>
-         No Beers Saved. Click  <a href="javascript:" ng-click="newTask()">Here</a> Save some!
-         </span>
-      </div>
-   </div>
-</ion-content>
+  </ion-content>
+</ion-view>
