Save beers to database; retrieve beers

--- a/www/templates/hopList/hopList.html
+++ b/www/templates/hopList/hopList.html
@@ -1,4 +1,4 @@
-<ion-view view-title="My Hop List">
+<ion-view cache-view="false" view-title="My Hop List">
   <ion-content>
    <h2>My Hop List</h2>
       <div class= "list">
