--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Beers">
+<ion-view cache-view="false" view-title="Beers">
   <ion-content>
   	<div class="card">
   		<div class="item item-divider">
@@ -9,11 +9,13 @@
 			<h4>{{ randomBrew.data.style.name }}</h4>
     	<h5>ABV: {{ randomBrew.data.abv || "N/A" }}</h5>
 			<h5>IBU: {{ randomBrew.data.ibu || "N/A" }}</h5>
+      <h6>{{ randomBrew.data.available.name }}</h6>
 
     	<p>{{ randomBrew.data.style.category.name }} </p>
     	<p>{{ randomBrew.data.description || randomBrew.data.style.category.description}}</p>
+      <button class ="button" ng-click="pourBeer()">Random Beer</button>
+      <button class ="button" ng-click="saveBeertoHopList()">Save Beer</button>
 			</div>
-  	</div>
-	   <button on-swipe-right="onSwipeRight()" class="button">Next</button> 	
+  	</div>    	
   </ion-content>
 </ion-view>
