renamed function to removeBeer

--- a/www/templates/menu/menu.html
+++ b/www/templates/menu/menu.html
@@ -24,15 +24,15 @@
         <ion-item menu-close href="#/app/browse">
           Browse the Hops
         </ion-item>
-        <ion-item menu-close href="#/app/search">
+        <!-- <ion-item menu-close href="#/app/search">
           Search for Hops
-        </ion-item>
+        </ion-item> -->
          <ion-item menu-close href="#/app/hopList">
           Saved Brews
         </ion-item>
-        <ion-item menu-close href="#/app/settings">
+        <!-- <ion-item menu-close href="#/app/settings">
           App Settings
-        </ion-item>
+        </ion-item> -->
       </ion-list>
     </ion-content>
   </ion-side-menu>
