--- a/www/templates/hopList/hopList.html
+++ b/www/templates/hopList/hopList.html
@@ -1,29 +1,30 @@
 <ion-view cache-view="false" view-title="My Hop List">
-  <ion-content>
-   <div class="list card" ng-repeat="hop in hops">
-
-      <div class="item item-avatar">
-        <img src="{{ hop.icon }}">
-        <h2>{{ hop.name }}</h2>
-        <p>{{ hop.style }}</p>
-      </div>
-
-      <div class="item item-body">
-        <img class="full-image" ng-src= "{{ hop.image }}">
-        {{ hop.description }}
-       <!--  <p>
-          <a href="#" class="subdued">1 Like</a>
-          <a href="#" class="subdued">5 Comments</a>
-        </p> -->
-      </div>
-
-      <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" ng-click="log(hop._id)">
-          <i class="icon ion-trash"></i>
-          Delete
-        </a>
-      </div>
+  <ion-content = 'browseCtrl'>
+    <div>
+        <label>Search: <input ng-model="searchText"></label>
     </div>
+     <div class="list card" ng-repeat="hop in hops | filter:search">
+      <!-- <p ng-show="!hops">No Hops in the List. Save Some!</p> -->
+        <div class="item item-avatar">
+          <img src="{{ hop.icon }}">
+          <h2>{{ hop.name }}</h2>
+          <p>{{ hop.style }}</p>
+        </div>
+        <div class="item item-body">
+          <img class="full-image" ng-src= "{{ hop.image }}">
+          {{ hop.description }}
+         <!--  <p>
+            <a href="#" class="subdued">1 Like</a>
+            <a href="#" class="subdued">5 Comments</a>
+          </p> -->
+        </div>
+        <div class="item tabs tabs-secondary tabs-icon-left">
+          <a class="tab-item" ng-click="removeBeer(hop._id)">
+            <i class="icon ion-trash"></i>
+            Delete
+          </a>
+        </div>
+      </div>
   </ion-content>
 </ion-view>
 
