--- a/www/templates/browse/browse.html
+++ b/www/templates/browse/browse.html
@@ -1,5 +1,5 @@
 <ion-view cache-view="false" view-title="Beers">
-  <ion-content>
+  <ion-content class="browse">
   	<div class="card">
   		<div class="item item-divider">
   			<h2>{{ randomBrew.data.name}}</h2>
