--- a/www/templates/hopList/hopList.html
+++ b/www/templates/hopList/hopList.html
@@ -1,8 +1,8 @@
 <ion-view cache-view="false" view-title="My Hop List">
-  <ion-content = 'browseCtrl'>
-    <div>
+  <ion-content = 'browseCtrl' class="hopList">
+   <!--  <div>
         <label>Search: <input ng-model="searchText"></label>
-    </div>
+    </div> -->
      <div class="list card" ng-repeat="hop in hops | filter:search">
       <!-- <p ng-show="!hops">No Hops in the List. Save Some!</p> -->
         <div class="item item-avatar">
@@ -19,35 +19,11 @@
           </p> -->
         </div>
         <div class="item tabs tabs-secondary tabs-icon-left">
-          <a class="tab-item" ng-click="removeBeer(hop._id)">
-            <i class="icon ion-trash"></i>
+          <button class="button button-block button-assertive" ng-click="removeBeer(hop._id)">
+            <!-- <i class="icon ion-trash"></i> -->
             Delete
-          </a>
+          </button>
         </div>
       </div>
   </ion-content>
 </ion-view>
-
-
-
-
-
-<!-- <ion-view cache-view="false" view-title="My Hop List">
-  <ion-content>
-   <h2>My Hop List</h2>
-      <div class= "list card" ng-repeat="hop in hops"
-            class="item item-thumbnail-left">
-           <img ng-src="{{ hop.icon }}">
-           <h2>{{ hop.name }}</h2>
-           <h3>{{ hop.brewery }}</h3>
-           <h5>{{ hop.style }}</h5>
-           <h4>{{ hop.abv }}</h4>
-           <h4>{{ hop.ibu }}</h4>
-           <div>
-             <a class="button" ui-sref="app.hopView">
-             View
-             </a>
-          </div>
-      </div>
-  </ion-content>
-</ion-view> -->
