--- a/www/templates/menu/menu.html
+++ b/www/templates/menu/menu.html
@@ -1,9 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="false" ng-controller="menuCtrl">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-dark">
       <ion-nav-back-button>
       </ion-nav-back-button>
-
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
@@ -13,13 +12,16 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-dark">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content class="sMenu">
       <ion-list>
-        <ion-item menu-close ng-click="login()">
+        <!-- <ion-item menu-close ng-click="login()">
           Login
+        </ion-item> -->
+        <ion-item menu-close href="#/app/landing">
+          Hop Or Not?!
         </ion-item>
         <ion-item menu-close href="#/app/browse">
           Browse the Hops
