--- a/www/templates/menu/menu.html
+++ b/www/templates/menu/menu.html
@@ -17,21 +17,9 @@
     </ion-header-bar>
     <ion-content class="sMenu">
       <ion-list>
-        <!-- <ion-item menu-close ng-click="login()">
-          Login
-        </ion-item> -->
-        <ion-item menu-close href="#/app/landing">
-          Hop Or Not?!
-        </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse the Hops
-        </ion-item>
-        <!-- <ion-item menu-close href="#/app/search">
-          Search for Hops
-        </ion-item> -->
-         <ion-item menu-close href="#/app/hopList">
-          Saved Brews
-        </ion-item>
+         <a menu-close href="#/app/landing" class="button button-full button-dark">Hop or Not?!</a>
+        <a menu-close href="#/app/browse" class="button button-full button-dark">Browse Hops</a>
+         <a menu-close href="#/app/hopList" class="button button-full button-dark">HopList</a>
         <!-- <ion-item menu-close href="#/app/settings">
           App Settings
         </ion-item> -->
