--- a/www/templates/landing/landing.html
+++ b/www/templates/landing/landing.html
@@ -1,7 +1,11 @@
 <ion-view>
-  <ion-content class="landing" bar bar-header bar-dark>
-	 		<div class="list card">
-	 			<img class="logo" src="../../img/logos/hipsterlogogenerator_1442971519195.png">
+  <ion-content bar bar-header bar-dark>
+  	<div class="landing">
+	 		<div class="full-image">
+	 			<img class="full-image" src="img/logos/hipsterlogogenerator_1442971519195.png">
 			</div>
+		<div class= "landing-image">
+			<img class="full-image" src="img/logos/hipsterlogogenerator_1442971519195.png">	
+		</div>
   </ion-content>
 </ion-view>
