--- a/www/templates/menu/menu.html
+++ b/www/templates/menu/menu.html
@@ -17,12 +17,9 @@
     </ion-header-bar>
     <ion-content class="sMenu">
       <ion-list>
-         <a menu-close href="#/app/landing" class="button button-full button-dark">Hop or Not?!</a>
-        <a menu-close href="#/app/browse" class="button button-full button-dark">Browse Hops</a>
-         <a menu-close href="#/app/hopList" class="button button-full button-dark">HopList</a>
-        <!-- <ion-item menu-close href="#/app/settings">
-          App Settings
-        </ion-item> -->
+         <a menu-close href="#/app/landing" class="button button-full button-dark"><i class="icon ion-ios-home"><span>&nbsp</span></i>Hop or Not?!</a>
+        <a menu-close href="#/app/browse" class="button button-full button-dark"><i class="icon ion-ios-pulse-strong"><span>&nbsp</span></i>Browse Hops</a>
+         <a menu-close href="#/app/hopList" class="button button-full button-dark"><i class="icon ion-beer"><span>&nbsp</span></i>HopList</a>
       </ion-list>
     </ion-content>
   </ion-side-menu>
