--- a/www/templates/landing/landing.html
+++ b/www/templates/landing/landing.html
@@ -1,11 +1,14 @@
 <ion-view>
   <ion-content bar bar-header bar-dark>
+  <div class="main">
+  		<img class="logo" src="img/stock/mainpage1.png">
+	</div>  		
   	<div class="landing">
-	 		<div class="full-image">
-	 			<img class="full-image" src="img/logos/hipsterlogogenerator_1442971519195.png">
+	 		<div class="logoDIV">
+	 			<!-- <img class="logo" src="img/logos/hipsterlogogenerator_1442971519195.png"> -->
 			</div>
 		<div class= "landing-image">
-			<img class="full-image" src="img/logos/hipsterlogogenerator_1442971519195.png">	
+			<!-- <img class="full-image" src="img/logos/hipsterlogogenerator_1442971519195.png">	 -->
 		</div>
   </ion-content>
 </ion-view>
