--- a/www/css/style.css
+++ b/www/css/style.css
@@ -56,11 +56,11 @@
   }
 
   .sMenu {
-  	background: url('../img/stock/beer-699453_1280.jpg');
-  	background-size: 100% auto;
-  	background-color: #444444;
-  	background-repeat: no-repeat;
-  	text-align: center;
+    background: url('../img/stock/beer-699453_1280.jpg');
+    background-size: 100% auto;
+    background-color: #444444;
+    background-repeat: no-repeat;
+    text-align: center;
 
   }
 
@@ -96,10 +96,21 @@
     color: #F5F5F5;
   } 
 
- .browseCard .item h6 {
+.item h5 {
     color: #F5F5F5;
   }  
 
+ .item h6 {
+    color: #F5F5F5;
+  }  
+
+.item {
+  text-align: center;
+}
+
+.full-image {
+  max-width: 500px;
+}
 .browseCard .item img {
     opacity: .9;
   }  
@@ -110,7 +121,7 @@
 
 
   div.list.card {
-  	position: center;
+    position: center;
 
     background-color: #444444;
   }
@@ -119,5 +130,3 @@
     color: white;
     background-color: ;
   }
-
- 
