--- a/www/templates/hopList/hopList.html
+++ b/www/templates/hopList/hopList.html
@@ -8,14 +8,18 @@
         </div>
         <div class="item item-body">
           <img class="full-image" ng-src= "{{ hop.image }}">
-          {{ hop.description }}
+            <h5>Brewery {{ hop.brewery }}
+            <h6>ABV: {{ hop.abv }}</h6>
+            <h6>IBU: {{ hop.ibu }}</h6>
+            <h6> Avail: {{ hop.availability }} </h6>
+            <p> {{ hop.description }} <p>
          <!--  <p>
             <a href="#" class="subdued">1 Like</a>
             <a href="#" class="subdued">5 Comments</a>
           </p> -->
         </div>
         <div class="item tabs tabs-secondary tabs-icon-left">
-          <button class="button button-block button-assertive" ng-click="removeBeer(hop._id)">
+          <button class="button button-assertive" ng-click="removeBeer(hop._id)">
             <i class="icon ion-trash-b"></i>
             Delete
           </button>
